# jad-ai

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backup_data/: jad_occurrence__1.json  jad_occurrence__1000.json  jad_occurrence__1000text  jad_occurrence__1001text  jad_occurrence__1002text  jad_occurrence__1003.json  jad_occurrence__1004.json  jad_occurrence__1005.json  jad_occurrence__1005text  jad_occurrence__1017.json  jad_occurrence__1017text  jad_occurrence__1018text  jad_occurrence__1019.json  jad_occurrence__1021text  jad_occurrence__1022.json  jad_occurrence__1023.json  jad_occurrence__1024text  jad_occurrence__1025text  jad_occurrence__1026text  jad_occurrence__1027.json  jad_occurrence__1028.json  jad_occurrence__1028text  jad_occurrence__1029.json  jad_occurrence__1030.json  jad_occurrence__1030text  jad_occurrence__1033text  jad_occurrence__1036.json  jad_occurrence__1036text  jad_occurrence__1037.json  jad_occurrence__1037text  jad_occurrence__1039.json  jad_occurrence__1039text  jad_occurrence__104.json  jad_occurrence__1040.json  jad_occurrence__1042.json  jad_occurrence__1042text  jad_occurrence__1043text  jad_occurrence__1044text  jad_occurrence__1045.json  jad_occurrence__1045text  (+725 more)
data/: jad_occurence__1.json  jad_occurence__104.json  jad_occurence__104text  jad_occurence__107.json  jad_occurence__107text  jad_occurence__108.json  jad_occurence__108text  jad_occurence__109.json  jad_occurence__109text  jad_occurence__110.json  jad_occurence__110text  jad_occurence__111.json  jad_occurence__111text  jad_occurence__112.json  (+2627 more)
(+1146 files in other folders)
