[project]
name = "jad-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acdh-baserow-pyutils>=0.10",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
